Bug 158958 - Comment marker makes it difficult to see the data in a cell
Summary: Comment marker makes it difficult to see the data in a cell
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.6.4.1 release
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Heiko Tietze
URL:
Whiteboard: target:24.8.0 inReleaseNotes:24.8
Keywords:
: 163440 (view as bug list)
Depends on:
Blocks: Calc-Comments
  Show dependency treegraph
 
Reported: 2024-01-01 16:28 UTC by insonus
Modified: 2026-03-24 14:24 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Comment marker problem (1.07 KB, image/png)
2024-01-01 16:31 UTC, insonus
Details
ods file has comment marker problem (7.89 KB, application/vnd.oasis.opendocument.spreadsheet)
2024-01-02 02:27 UTC, insonus
Details

Note You need to log in before you can comment on or make changes to this bug.
Description insonus 2024-01-01 16:28:55 UTC
Description:
The comment marker looks too large, making it difficult to see the rightmost character in the cell (the data should be right aligned).

Steps to Reproduce:
1. Enter any number into the cell.
2. Add a comment to this cell.

Actual Results:
The comment marker overlaps the rightmost digit

Expected Results:
The comment marker should not interfere


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.6.4.1 (X86_64) / LibreOffice Community
Build ID: e19e193f88cd6c0525a17fb7a176ed8e6a3e2aa1
CPU threads: 20; OS: Windows 10.0 Build 19045; UI render: Skia/Vulkan; VCL: win
Locale: ru-RU (ru_RU); UI: ru-RU
Calc: threaded
Comment 1 insonus 2024-01-01 16:31:36 UTC
Created attachment 191686 [details]
Comment marker problem
Comment 2 ady 2024-01-01 18:23:46 UTC
Please attach a sample ods file that includes the problem.

Note that any file you attach will be publicly available, so, ideally the sample document should only include the minimum data and features that will replicate the problem.
Comment 3 insonus 2024-01-02 02:27:21 UTC
Created attachment 191689 [details]
ods file has comment marker problem
Comment 4 QA Administrators 2024-01-02 03:10:41 UTC Comment hidden (obsolete)
Comment 5 ady 2024-01-02 03:33:10 UTC
There are several ways to workaround the comment indicator getting in the way of the content of the cell. One of those is using the zoom feature included in Calc. There are several additional methods.

I completely agree that the comment indicator should be smaller, contrary to what some developers have decided to do (bigger and proportionally growing with zoom factor), not so long ago.

Unfortunately, I have already spent too many hours trying to explain this to developers, in vain.

CC'ing H eiko Tietze from the UX team.
Comment 6 Heiko Tietze 2024-01-02 10:20:10 UTC
How about an option to switch off the dynamic marker? The alternative is a fix size covering much content when zoomed out, eg 50%, but less when zoomed in. Otherwise, I'm open for suggestions. The solution was an attempt to solve exactly the same problem. See my bug 91415 comment 6.
Comment 7 ady 2024-01-02 15:30:18 UTC
(In reply to Heiko Tietze from comment #6)
> See my bug 91415 comment 6.

And don't forget about bug 153106. Carefully written words, never read with the required attention. So, here we are. Am I surprised? Not at all.
Comment 8 V Stuart Foote 2024-01-02 15:57:00 UTC
No, bug 153106 was closed => WF for the reversion of the marker, with expectation there would be an UNO enhancement ticket to control the Comment indicator (Tools -> Options -> Calc -> View) and "quickly switch this option on/off".

We could repurpose this to be that enhancement... UNO to toggle the comments (and Formula and extended content indicators) temporarily hidden.
Comment 9 ady 2024-01-02 17:19:08 UTC
(In reply to V Stuart Foote from comment #8)
> No, bug 153106 was closed => WF for the reversion of the marker, with
> expectation there would be an UNO enhancement ticket to control the Comment
> indicator (Tools -> Options -> Calc -> View) and "quickly switch this option
> on/off".
> 
> We could repurpose this to be that enhancement... UNO to toggle the comments
> (and Formula and extended content indicators) temporarily hidden.

I opened tdf#153106, because I was told that reopening the first one was not the proper procedure. The main point I tried to convey back then was that the changes that were made to the comment indicator were not as welcome as some developers might had thought – to put it elegantly. I expressed not just a subjective opinion, but rather a lot of objective points, multiple times.

The UNO toggle (which I agree with its need, convenience and goal, and which is independent of the original report) was/is a secondary matter regarding the discussion in tdf#153106. The fact that Heiko closed it as WF doesn't make my objections invalid. I still claim that the changes to the comment indicator were/are not an improvement, and that it should be smaller and not growing with zoom-in factors. I am not going to mention yet again the many objective reasons I raised back then.

This new report/request is mainly about the same: to (at least partially) revert the changes to the (bigger) size and (growing) behavior of the comment indicator. If QA wants to re-purpose this report, fine; but let's first be clear about what the original reporter was asking, and about what the prior reports were about.
Comment 10 insonus 2024-01-02 20:26:59 UTC
I think we should assume that the data is primary. The comment indicator should in no case interfere with the data at any viewing scale. I think a better option would be to give the user the ability to customize the appearance and behavior of the comment indicator. I am not ready to explain exactly how this indicator should look, but I believe that it should either not interfere with the data at all, or be located behind the data. The data should be in the foreground and clearly visible.
Comment 11 V Stuart Foote 2024-01-02 20:39:00 UTC
(In reply to ady from comment #9)

Yes it does make your objections invalid--UX decision was made for bug 153106 and a revert of the bug 91415 zoom responsive triangle marking for comments remains, and yes you have harped on it repeatedly with no traction for a revisit, frankly annoyingly so. 

What is needed as Heiko notes comment 6, and bug 153106#33, are UI controls of display of the markers (so the Comment, and also data overflow, and formula marks).  

For that I personally favor a single simple UNO for all 3 markers available to assign for keyboard shortcut as well as Menu, and TB button use to toggle visibility at the zoom appropriate size.

Calc sheet Zoom toggle noted in bug 91415 actually remains functional (<Ctrl>+MouseWheel) while the Zoom-in and Zoom-out shortcuts were reassigned (now <Ctrl>+<Shift><PgUp|PgDn>) for cross module consistency.
Comment 12 V Stuart Foote 2024-01-02 20:50:53 UTC
(In reply to insonus from comment #10)

Believe the current zoom responsive triangle marker is already drawn behind the cell's data values. The cells values are visible and not obscured, though contrast against the marker can be a bit low.
Comment 13 insonus 2024-01-02 22:17:16 UTC
Yes, marker is drawn behind the cell's data values, the cells values are visible.
Comment 14 ady 2024-01-03 02:00:34 UTC Comment hidden (off-topic)
Comment 15 Heiko Tietze 2024-01-03 09:27:03 UTC
-1
* user-defined symbol
* revert the patch
* some default margin to make space for the symbol

-0.5
* UNO command to toggle the indicator on/off
* less obtrusive default color 

+0.5
* different position for the indicator

+1 
* expert options to control the dynamic size
* option to disable the dynamic size


In the end any solution will have shortcomings.
Comment 16 Stephane Quenson 2024-01-05 11:44:15 UTC
As a user of Calc and contributor to the forum https://ask.libreoffice.org/, I support the idea to have an expert option that would allow to define the shape, its size and color.
Comment 17 Cor Nouws 2024-01-11 11:13:43 UTC
(In reply to Heiko Tietze from comment #15)
> +1 
> * expert options to control the dynamic size
> * option to disable the dynamic size
Looks best to me.
& thanks to all for patiently explaining the various ideas ;)
Comment 18 Eyal Rozenberg 2024-01-11 22:13:55 UTC
Didn't we discuss this issue last time the comment marker came up?

Anyway, I say it's not the size, it's the fact that the cell contents is allowed to overlap so much of the marker. The content should be excluded from the comment indicator area of the cell so that it doesn't overlap its area.
Comment 19 ady 2024-01-12 03:19:21 UTC
(In reply to Eyal Rozenberg from comment #18)
> The content should be excluded
> from the comment indicator area of the cell so that it doesn't overlap its
> area.

That's unacceptable. The limitation is on LO to resolve, instead of limiting/affecting the user, just because of a problem that LO is causing. Additionally, that would alter how the spreadsheet looks, especially when comparing with opening the same spreadsheet with any other tool. Think about a cell with centered alignment, for instance.

Are you suggesting that the cell should be altered (in content and/or size) every time a comment is either added or deleted? Or when opening older spreadsheets?

LO already altered the presentation of the comments themselves with the way the author and date+time info was forcibly added on every comment, whether the user needs/wants that or not. More than one report was started related to that. Users asked to improve the indicator because it bothers, and instead of improving the documentation about how to avoid such issue (especially for inexperienced users), LO made the indicator even bigger. And now there is this idea that the presentation of the cell (content and/or size) has to change because of the indicator? How many users would be "pleased" with that?
Comment 20 Heiko Tietze 2024-01-12 10:51:25 UTC
We discussed the topic in the design meeting.

The summary in comment 15 got supported. We pondered over the need for UI options, eg. Tools > Options > Calc > View, but should better strive for clean dialogs. And if the default would be better, such an option might not be needed anymore.

Since the calculation considers DPI*Zoom*6 plus and the base value 4, just one number could be not enough. And two options sounds also not user-friendly. So I'm going to change the default calculation from 6/4 (DPI/ZOOM 100/100 => 10, 100/50 => 7, 100/150 => 13) to 3/3 (DPI/ZOOM 100/100 => 6, 100/50 => 4, 100/150 => 8) - this makes the indicator very small. I'll also use the grid color for the border and move the triangle to the very edge. For the customization I'm going to introduce an expert option that does the dynamic thing for a value <=0 and otherwise uses it as fix pixel size independent from zoom and DPI.
Comment 21 Eyal Rozenberg 2024-01-16 23:12:03 UTC
(In reply to Heiko Tietze from comment #20)
> We discussed the topic in the design meeting.

I'm really sorry I couldn't make that meeting. Here's my take on comment 15:

"user-defined symbol" <- I don't mind, but I don't see it resolves the problem. A triangle may overlap the content and so may a square or whatever else you put there.
"revert the patch" <- I say: Let's first work out a proper "UI/UX policy" regarding the various aspects of the comment indicator, rounding up the issues from multiple bugs, then change the code to implement it. But I don't mind reversion or non-reversion
"some default margin to make space for the symbol" <- Depends on what kind of margin. IMHO - make the margin a diagonal bar separating the indicator graphic from the rest of the cell, in which nothing may be rendered.

"UNO command to toggle the indicator on/off" <- Per cell or globally? Globally, I don't mind, but it doesn't solve the problem.
"less obtrusive default color" <- That's a whole other kettle of fish. But I will say the magenta seems silly to me.

"different position for the indicator" <- Won't we have a similar problem in any position? Anyway, I think the position is fine. Also note that when the sheet is RTL the position is flipped.

"expert options to control the dynamic size" <- I don't mind, but an expert option is almost never a solution to a UI/UX problem, unless it's an extremely niche use case
"option to disable the dynamic size" <- Wait, is the size dynamic now?

> And if the default would be better, such an option might not
> be needed anymore.

Indeed.
Comment 22 Commit Notification 2024-01-17 07:51:15 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/bddae0d0dc4f64757100e00432ca40a6470d2c31

Resolves tdf#158958 and tdf#159124 - Improvements to Comments indicator

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 23 Heiko Tietze 2024-01-17 08:11:03 UTC
The indicator is much smaller now. Please test carefully.

The expert Option NoteIndicator was added. Changing the value to something above 0 will draw the indicator in this absolute size (pixel per vertical/horizontal side) regardless the zoom and DPI factor. Please test this solution too (waiting to add this change to the release notes for a while).
Comment 24 Sara Adam 2024-07-12 04:39:45 UTC Comment hidden (spam)
Comment 25 raal 2024-11-22 17:49:16 UTC
*** Bug 163440 has been marked as a duplicate of this bug. ***