Resolves tdf#158958 and tdf#159124 - Improvements to Comments indicator

* Option to control the indicator size added
* Border color adopts the grid color
* Indicator moved to the very edge of the cell
* Default dynamic size reduced

Change-Id: Ia298edfa30061910344a1afa42b42840b9cdab77
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162175
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>